added get requests

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Project",
   "version": "1.0.0",
   "description": "",
-  "main": "bucketlist.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node bucketlist.js",
+    "start": "node /server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
